<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/title_home" />

        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_action_payment"
            android:title="@string/title_payment" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_action_history"
            android:title="@string/title_history" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_action_notifications"
            android:title="@string/title_notifications" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/title_settings" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_action_help"
            android:title="@string/help_and_feedback" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_action_logout"
            android:title="@string/log_out" />

    </group>

</menu>
