<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingTop="5dp">

    <TextView
        android:id="@+id/points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/points"
        android:textSize="17sp"
        android:textColor="@color/colorPrimaryText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/payment_method"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/payment_method"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryText"
            android:fontFamily="@string/san_serif_light"/>

        <TextView
            android:id="@+id/amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:text="@string/amount"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryText"
            android:fontFamily="@string/san_serif_light"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryText"
            android:fontFamily="@string/san_serif_light"/>

        <TextView
            android:id="@+id/trip_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textSize="16sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_action_star"
            android:gravity="center"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/grey"/>

</LinearLayout>