<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.RideCancelled">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:title="@string/ride_cancelled"
        app:titleTextColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="12dp">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:padding="5dp"
            android:src="@drawable/ic_sorry"
            android:layout_gravity="center"
            android:background="@drawable/round_background_grey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/were_sorry_you_couldn_t_complete_your_ride"
            android:textSize="17sp"
            android:textColor="@color/colorPrimaryText"
            android:fontFamily="@string/san_serif_light"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:text="@string/select_your_reason_s_for_cancelling"
        android:textSize="15sp"
        android:textColor="@color/colorPrimaryText"
        android:fontFamily="@string/san_serif_light"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@color/colorAccent"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/reasons_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </android.support.v7.widget.RecyclerView>

    <EditText
        android:id="@+id/write_your_own_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_your_own"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorPrimaryText"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:drawableStart="@drawable/ic_action_edit"
        android:drawablePadding="10dp"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_margin="10dp"
        android:background="@drawable/black_background_button_selector" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:text="@string/minimum_charge"
        android:textSize="15sp"
        android:textColor="@color/colorPrimaryText"
        android:fontFamily="@string/san_serif_light"/>

</LinearLayout>