<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="swoop.com.swoop.ui.Login"
    android:background="@color/white">
    
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/white"
        app:title="@string/title_login"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_gravity="center">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/colorPrimaryText">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/logEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_or_phone_number"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp"
                    android:fontFamily="@string/san_serif_light"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/colorPrimaryText"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/logPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@string/san_serif_light"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/black_background_button_selector"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/title_register"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryText"/>

            <TextView
                android:id="@+id/reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_password"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryText"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
