<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context="swoop.com.swoop.fragments.Payment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/contact_us_on"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryText"
            android:fontFamily="@string/san_serif_light"
            android:padding="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/contact_info"
            android:textSize="17sp"
            android:textColor="@color/colorPrimaryText"
            android:fontFamily="@string/san_serif_light"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/email_us"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryText"
            android:fontFamily="@string/san_serif_light"
            android:padding="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="top"
            android:layout_margin="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_email"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="top"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:hint="@string/write_email_here"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorPrimaryText"
                android:textSize="16sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_margin="10dp"
            android:background="@drawable/black_background_button_selector" />

    </LinearLayout>

</ScrollView>
