<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="swoop.com.swoop.ui.ResetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:title="@string/title_resetpassword"
            app:titleTextColor="@color/white"/>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/passwordreset_icon"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/password_reset_instructions"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryText"
            android:fontFamily="@string/san_serif_light"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColorHint="@color/colorPrimaryText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:fontFamily="@string/san_serif_light"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/send_reset_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:background="@color/black"
        android:layout_gravity="bottom"/>

</FrameLayout>
