<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingTop="10dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_notifications"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/notification_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title"
                android:textSize="17sp"
                android:textColor="@color/colorPrimaryText"/>

            <TextView
                android:id="@+id/notification_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryText"
                android:fontFamily="@string/san_serif_light"/>

        </LinearLayout>

        <TextView
            android:id="@+id/notificaton_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryText"
            android:fontFamily="@string/san_serif_light"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/grey"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

</LinearLayout>