<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="swoop.com.swoop.ui.PickUp">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp">
    </com.google.android.gms.maps.MapView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:title="@string/pick_up"
            app:titleTextColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="13dp"
            android:padding="10dp"
            android:background="@drawable/solid_curved_background_white">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_action_location_pin"/>

                <View
                    android:layout_width="1.5dp"
                    android:layout_height="20dp"
                    android:background="@color/colorAccent"/>

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_destination"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/current_location"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:text="@string/current_location"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"/>

                <TextView
                    android:id="@+id/destination"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:text="@string/destination"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/pick_up_bottom_layout"/>

</android.support.design.widget.CoordinatorLayout>
